[package]
name = "test-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
reduct-base = { git = "https://github.com/reductstore/reductstore.git", branch = "RS-614-extension-impl", features = ["ext"] }
log = "0.4.26"
async-trait = "0.1.88"

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]