[package]
name = "test-ext"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
reduct-base = { git = "https://github.com/reductstore/reductstore.git", branch = "main" , features = ["ext", "io"] }
tokio = { version = "1.45.0", features = ["sync"] }
async-trait = "0.1.88"
log = "0.4.27"
async-stream = "0.3.6"

[build]
